@@ -1,3 +1,7 @@
+2016-08-11  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/truetype/ttinterp.c (Pop_Push_Count): Fix some entries.
+
 2016-08-10  Peter Klotz  <Peter.Klotz@ith-icoserve.com>
 
 	* src/smooth/ftgrays.c (gray_hline): Fix uninitialized access.
